display : fixing on mobile : 4px

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -165,6 +165,7 @@ body {
 @media only screen and (max-width: 990px) {
   .playground-2212 {
     flex-direction: column;
+    font-size: 4px;
   }
 }
 
@@ -172,6 +173,10 @@ body {
 
   .nav, .playground, .field {
     font-size: 8px;
+  }
+
+  .data-field-2212 {
+    font-size: 4px;
   }
 
   .data-field-1501-santa {
@@ -186,9 +191,9 @@ body {
     margin-top: .3em;
   }
 
-  .playground-2212 {
-    font-size: 4px;
-  }
+  // .playground-2212 {
+  //   font-size: 4px;
+  // }
 
   .btn {
     font-size: $TextSize-025;
